[package]
name = "audio_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symphonia = { version = "0.5.1", features = ["mp3"] }
rustfft = "6.1.0"
num-complex = "0.4.2"
rand = "0.8.5"
plotlib = "0.5.1"
itertools-num = "0.1.3"
spectrum-analyzer = "1.2.6"
opencv = "0.74.2"
kdam = "0.3.0"
clap = { version = "4.0.32", features = ["derive"] }
